thai-gap: Set quotations & data formats to ok, and inline notes to NA.

--- a/gap-analysis/thai-gap.html
+++ b/gap-analysis/thai-gap.html
@@ -260,16 +260,17 @@
 
 
 
-<section id="quotations" class="tbd">
+<section id="quotations" class="ok">
 <h3>Quotations</h3>
 <p id="prompt-quotations" class="status_prompt promptStub"></p>
 	
 	
 <div id="insert-quotations"></div>
+<p>Thai uses the same quote marks as English, so it avoids some of the issues that other writing systems encounter.</p>
 </section>
 
 
-<section id="inline_notes" class="tbd">
+<section id="inline_notes" class="na">
 <h3>Inline notes &amp; annotations</h3>
 <p id="prompt-inline_notes" class="status_prompt promptStub"></p>
 
@@ -279,7 +280,7 @@
 
 
 
-<section id="data_formats" class="tbd">
+<section id="data_formats" class="ok">
 <h3>Data formats &amp; numbers</h3>
 <p id="prompt-data_formats" class="status_prompt promptStub"></p>
 
