Link to abugida

--- a/thai/index.html
+++ b/thai/index.html
@@ -104,7 +104,7 @@
   </section>
 <section id="h_script_overview">
   <h2>Thai Script Overview</h2>
-    <p>Thai is an abugida. Consonant letters have an inherent vowel sound. Vowel-signs are attached to the consonant to produce a different vowel.</p>
+    <p>Thai is an <span class="newterm"><a class="termref" href="https://www.unicode.org/glossary/#abugida">abugida</a></span>. Consonant letters have an inherent vowel sound. Vowel-signs are attached to the consonant to produce a different vowel.</p>
 <p>Unlike devanagari, multiple vowel-signs may be used with a single character, and those positioned to the left or right of the consonant(s) are not combining characters. Like other Southeast Asian scripts, Thai is heavily based on syllables, so where there are syllable-initial clusters, a prescript vowel-sign will be displayed at the start of the syllable, rather than immediately before the consonant it follows.</p>
 <p>Thai is a tonal language, and the consonant characters chosen for a syllable have implications on the tone of that syllable.</p>
 <p>Words are not separated by spaces.</p>
