Migrate to "respec-w3c" profile

--- a/thai/index.html
+++ b/thai/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
 
   <title>Thai Layout Requirements (Draft)</title>
-  <script src="https://www.w3.org/Tools/respec/respec-w3c-common" async="" class="remove" type="text/javascript">
+  <script src="https://www.w3.org/Tools/respec/respec-w3c" class="remove" defer>
 </script>
   <script class="remove" type="text/javascript">
   var respecConfig = {
@@ -29,29 +29,10 @@
         { name: "Richard Ishida", company: "W3C" }
       ],
 
-      wg:           "Internationalization Working Group",
-      wgURI:        "https://www.w3.org/International/core/",
-      wgPublicList: "public-i18n-sealreq",
-      bugTracker: { new: "https://github.com/w3c/sealreq/issues", open: "https://github.com/w3c/sealreq/issues" } ,
-      otherLinks: [
-        {
-          key: "Github",
-          data: [
-          {
-            value: "repository",
-            href: "https://github.com/w3c/sealreq"
-          }
-          ]
-        }
-      ],
+      group: "i18n",
+      github:	"w3c/sealreq",
 
-      // URI of the patent status for this WG, for Rec-track documents
-      // !!!! IMPORTANT !!!!
-      // This is important for Rec-track documents, do not copy a patent URI from a random
-      // document unless you know what you're doing. If in doubt ask your friendly neighbourhood
-      // Team Contact.
-      wgPatentURI:  "https://www.w3.org/2004/01/pp-impl/32113/status",
-      // !!!! IMPORTANT !!!! MAKE THE ABOVE BLINK IN YOUR HEAD
+      wgPublicList: "public-i18n-sealreq",
     };
   </script>
   <link rel="stylesheet" href="local.css" type="text/css">
