thai: Fix misordered counter-styles examples

--- a/thai/index.html
+++ b/thai/index.html
@@ -480,8 +480,8 @@ is always preceded by space, however it should not wrap to the next line on its 
 <p>The numeric style uses the Thai digits '๐' '๑' '๒' '๓' '๔' '๕' '๖' '๗' '๘' '๙' in a decimal pattern.</p>
 
 <figure id="fig_cs_alphabetic">
-<img src="index-data/fig_cs_alphabetic.png" alt="1⇨๑ 2⇨๒ 3⇨๓ 4⇨๔ 11⇨๑๑ 22⇨๒๒ 33⇨๓๓ 44⇨๔๔ 111⇨๑๑๑ 222⇨๒๒๒ 333⇨๓๓๓" style="max-width: 90%;">
-<figcaption>Example values for the alphabetic counter style.</figcaption>
+<img src="index-data/fig_cs_numeric.png" alt="1⇨ก 2⇨ข 3⇨ค 4⇨ง 11⇨ฎ 22⇨น 33⇨ล 44⇨กค 111⇨ขภ 222⇨จด 333⇨ซจ" style="max-width: 90%;">
+<figcaption>Example values for the numeric counter style.</figcaption>
 </figure>
 </section>
 
@@ -495,8 +495,7 @@ is always preceded by space, however it should not wrap to the next line on its 
 <p>The alphabetic style uses the following letters, in the order shown: 'ก' 'ข' 'ค' 'ง' 'จ' 'ฉ' 'ช' 'ซ' 'ฌ' 'ญ' 'ฎ' 'ฏ' 'ฐ' 'ฑ' 'ฒ' 'ณ' 'ด' 'ต' 'ถ' 'ท' 'ธ' 'น' 'บ' 'ป' 'ผ' 'ฝ' 'พ' 'ฟ' 'ภ' 'ม' 'ย' 'ร' 'ล' 'ว' 'ศ' 'ษ' 'ส' 'ห' 'ฬ' 'อ' 'ฮ'.</p>
 
 <figure id="fig_cs_numeric">
-<img src="index-data/fig_cs_numeric.png" alt="1⇨ก 2⇨ข 3⇨ค 4⇨ง 11⇨ฎ 22⇨น 33⇨ล 44⇨กค 111⇨ขภ 222⇨จด 333⇨ซจ
-" style="max-width: 90%;">
+<img src="index-data/fig_cs_alphabetic.png" alt="1⇨๑ 2⇨๒ 3⇨๓ 4⇨๔ 11⇨๑๑ 22⇨๒๒ 33⇨๓๓ 44⇨๔๔ 111⇨๑๑๑ 222⇨๒๒๒ 333⇨๓๓๓" style="max-width: 90%;">
 <figcaption>Example values for the alphabetic counter style.</figcaption>
 </figure>
 </section>
