--- a/thai/index.html
+++ b/thai/index.html
@@ -444,17 +444,38 @@ is always preceded by space, however it should not wrap to the next line on its 
 <section id="baselines">
 <h3>Baselines, line height, etc.</h3>
 
-<p>Thai places vowel and tone marks above base characters, one above the other, and can also add combining characters below the line. The complexity of these marks means that the vertical resolution needed for clearly readable Thai text is higher than for English, or most Latin text. </p>
+<p>Thai uses the so-called 'alphabetic' baseline, which is the same as for Latin and many other scripts.</p>
 
-<p>The baseline of Thai text is the same as that of embedded Latin text, so there are no particular issues related to alignment of baselines between fonts. </p>
+<p>Thai places vowel and tone marks above base characters, one above the other, and can also add combining characters below the line. The complexity of these marks means that the vertical resolution needed for clearly readable Thai text is higher than for, say, Latin text. In addition, Thai tends to add more <em>interline</em> spacing than Latin text does.</p>
 
-<figure id="fig_metrics">
-<img src="index-data/metrics.png" alt="พรุ่งนี้" class="ex" data-notes="Hibizcus default settings">
-<figcaption>Metrics for the Noto Serif Thai and Noto Serif fonts, viewed in Hibizcus.</figcaption>
+<p>To give an approximate idea, [[[#fig_baselines]]] compares Latin and Thai glyphs from Noto  fonts. The basic height of Thai letters is typically around the Latin x-height, however extenders and combining marks reach well beyond the Latin ascenders and descenders, creating a need for larger line spacing.</p>
+
+<figure id="fig_baselines">
+<div>
+<img src="index-data/fig_baselines_noto_serif.png" alt="Hhqxใฏูกิ้ปีฬุฬึ์๕๙" class="ex" data-notes="Noto Serif Thai 130px" style="max-width: 90%; margin-block-end:1rem;" lang="km">
+
+<img src="index-data/fig_baselines_noto_sans.png" alt="Hhqxใฏูกิ้ปีฬุฬึ์๕๙" class="ex" data-notes="Noto Sans Thai 130px" style="max-width: 90%;" lang="km">
+</div>
+<figcaption>Font metrics for Latin text  compared with Thai glyphs in the Noto Serif Thai (top) and Noto Sans Thai (bottom) fonts.</figcaption>
 </figure>
 
 
-<p>Thai places vowel and tone marks above base characters, one above the other, and can also add combining characters below the line. The complexity of these marks means that the vertical resolution needed for clearly readable Thai text is higher than for, say, Latin text. In addition, Thai tends to adds more interline spacing than Latin text does.</p>
+<p>[[[#fig_baselines_other]]] shows similar comparisons for the Thonburi and Angsana New fonts.</p>
+
+
+<figure id="fig_baselines_other">
+<div>
+<img src="index-data/fig_baselines_thonburi.png" alt="Hhqxใฏูกิ้ปีฬุฬึ์๕๙" class="ex" data-notes="Thonburi 130px" style="max-width: 90%; margin-block-end:2rem;" lang="km">
+
+<img src="index-data/fig_baselines_angsana.png" alt="Hhqxใฏูกิ้ปีฬุฬึ์๕๙" class="ex" data-notes="Angsana New 130px" style="max-width: 90%;" lang="km">
+</div>
+<figcaption>Latin font metrics compared with Thai glyphs in the Thonburi (top) and Angasana New (bottom) fonts.</figcaption>
+</figure>
+
+<!--figure id="fig_metrics">
+<img src="index-data/metrics.png" alt="พรุ่งนี้" class="ex" data-notes="Hibizcus default settings">
+<figcaption>Metrics for the Noto Serif Thai and Noto Serif fonts, viewed in Hibizcus.</figcaption>
+</figure-->
 </section>
 
 
