thai: Move line about inter-line spacing

--- a/thai/index.html
+++ b/thai/index.html
@@ -446,7 +446,7 @@ is always preceded by space, however it should not wrap to the next line on its 
 
 <p>Thai uses the so-called 'alphabetic' baseline, which is the same as for Latin and many other scripts.</p>
 
-<p>Thai places vowel and tone marks above base characters, one above the other, and can also add combining characters below the line. The complexity of these marks means that the vertical resolution needed for clearly readable Thai text is higher than for, say, Latin text. In addition, Thai tends to add more <em>interline</em> spacing than Latin text does.</p>
+<p>Thai places vowel and tone marks above base characters, one above the other, and can also add combining characters below the line. The complexity of these marks means that the vertical resolution needed for clearly readable Thai text is higher than for, say, Latin text. In addition.</p>
 
 <p>To give an approximate idea, [[[#fig_baselines]]] compares Latin and Thai glyphs from Noto  fonts. The basic height of Thai letters is typically around the Latin x-height, however extenders and combining marks reach well beyond the Latin ascenders and descenders, creating a need for larger line spacing.</p>
 
@@ -472,10 +472,12 @@ is always preceded by space, however it should not wrap to the next line on its 
 <figcaption>Latin font metrics compared with Thai glyphs in the Thonburi (top) and Angasana New (bottom) fonts.</figcaption>
 </figure>
 
+
 <!--figure id="fig_metrics">
 <img src="index-data/metrics.png" alt="พรุ่งนี้" class="ex" data-notes="Hibizcus default settings">
 <figcaption>Metrics for the Noto Serif Thai and Noto Serif fonts, viewed in Hibizcus.</figcaption>
 </figure-->
+<p>Thai tends to add more <em>interline</em> spacing than Latin text does.</p>
 </section>
 
 
