--- a/thai/index.html
+++ b/thai/index.html
@@ -40,11 +40,11 @@
 
 <body>
 <div id="abstract">
-<p>This document describes requirements for the layout and presentation of text in languages that use the Thai script when they are used by Web standards and technologies, such as HTML, CSS, Mobile Web, Digital Publications, and Unicode.</p>
+<p>This document describes requirements for the layout and presentation of text in the Thai language, using the Thai script when they are used by Web standards and technologies, such as HTML, CSS, Mobile Web, Digital Publications, and Unicode.</p>
 </div>
 
 <div id="sotd">
-<p>This document describes the basic requirements for Thai script layout and text support on the Web and in eBooks. These requirements provide information for Web technologies such as CSS, HTML and digital publications about how to support users of Thai scripts. Currently the document focuses on Thai as used for the Thai language. The information here is developed in conjunction with a <a href="../gap-analysis/thai-gap.html">document that summarises gaps</a> in support on the Web for Thai.</p>
+<p>This document describes the basic requirements for the Thai language, using the Thai script layout and text support on the Web and in eBooks. These requirements provide information for Web technologies such as CSS, HTML and digital publications about how to support  Thai language speakers. Currently the document focuses on Thai as used for the Thai language. The information here is developed in conjunction with a <a href="../gap-analysis/thai-gap.html">document that summarises gaps</a> in support on the Web for Thai.</p>
 
 <p>The editor's draft of this document is being developed by the <a href="https://www.w3.org/International/groups/#mission">Southeast Asian Layout Task Force</a>, part of the W3C <a href="https://www.w3.org/International/ig/">Internationalization Interest Group</a>. It is published by the <a href="https://www.w3.org/International/core/">Internationalization Working Group</a>. The end target for this document is a Working Group Note.</p>
 
@@ -68,7 +68,7 @@
 <section id="h_about_this_document">
 <h3>About this document</h3>
 
-<p>This document outlines some features related to the layout of Thai text that may be useful background information for those reading the gap-analysis documents and issues for the Thai script.</p>
+<p>This document outlines some features related to the layout of Thai text used for the Thai language that may be useful background information for those reading the gap-analysis documents and issues for  Thai content authors. It doesn't address the needs of <a href="https://r12a.github.io/scripts/thai/index.html">other languages</a> that are written in the Thai script.</p>
 
 <p><strong>This document is an initial draft and needs thorough review by Thai experts.</strong></p>
 </section>
@@ -96,6 +96,7 @@
 <p>The document <a href="https://w3c.github.io/typography/">International text layout and typography index</a> (known informally as the text layout index) points to this document and others, and provides a central location for developers and implementers to find information related to various scripts.</p>
 
 <p>The W3C also maintains a tracking system that  has links to github issues in W3C repositories. There are separate links for (a) requests from developers to the user community for information about how scripts/languages work, (b) issues raised against a spec, and (c) browser bugs.  For example, you can find out <a href="https://w3c.github.io/i18n-activity/textlayout/?filter=type-info-request">what information developers are currently seeking</a>, and the resulting list can also be filtered by script.</p>
+<p>The initial material for this document was an edited copy of part of the <a href="https://r12a.github.io/scripts/thai/th.html">Thai orthography description</a> by the same author.</p>
 </section>
 </section>
 
